新增切换城市和手动更新天气的功能

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -24,7 +24,7 @@
             </intent-filter>
             
         </activity>
-        
+        <activity android:name="com.xiongzj.coolweather.activity.WeatherActivity"></activity>
     </application>
 
 </manifest>
